--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+html {
+  font-size: 62.5%; /* Now 1 rem = 10px in most browsers */
+}
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
+    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
+    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -72,17 +75,19 @@
     --card-border-rgb: 200, 200, 200;
   }
 }
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap");
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Work Sans", sans-serif;
 }
 
-html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: 1.6rem;
 }
 
 body {
@@ -104,4 +109,7 @@ a {
   html {
     color-scheme: dark;
   }
+}
+.page {
+  grid-column: main;
 }
