--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,25 +1,3 @@
-html {
-  font-size: 62.5%; /* Now 1 rem = 10px in most browsers */
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: sans-serif;
-}
-
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  font-size: 1.6rem;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.page {
-  grid-column: main;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
